Includes the test script + corrects the background color for more visibility

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
 }
 
 body div#root {
-  background-color: rgba(158, 185, 177, 0.8);
+  background-color: rgba(158, 185, 177, 0.9);
   padding: 0px 20px;
   margin: 15px 0;
   border-radius: 12px;
